Merge trunk into CPALockator-combat-mode
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/CPALockator-combat-mode@35564 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c